--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,5 +1,6 @@
 name: Flask Blog CI/CD
 
+# Trigger workflow on push to main branch
 on:
   push:
     branches: ["main"]
@@ -9,18 +10,32 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
+      # 1️⃣ Checkout the repo
+      - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Deploy to server via SSH
+      # 2️⃣ Deploy via SSH to your server
+      - name: Deploy to VM server
         uses: appleboy/ssh-action@v1.0.0
         with:
           host: ${{ secrets.SERVER_HOST }}
           username: ${{ secrets.SERVER_USER }}
           key: ${{ secrets.SERVER_SSH_KEY }}
+          port: 22
+          timeout: 30s
+          command_timeout: 10m
           script: |
+            echo "Pull latest code"
             cd /home/web_server/webites/flask-blog
+            git reset --hard   # optional: ensures clean state
+            git clean -fd      # optional: remove untracked files
             git pull origin main
+
+            echo "Stop current Docker containers"
             docker compose down
+
+            echo "Start Docker containers"
             docker compose up -d --build
+
+            echo "Deployment completed!"
 
